Fixed overflow in demo app in IE.

--- a/demo/demo.view.css
+++ b/demo/demo.view.css
@@ -6,6 +6,7 @@
 	flex-direction: column;
 	transform: translateZ(0);
 	max-width: 100%;
+	max-height: 100%;
 }
 
 [mol_demo_header] {
